--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //agentWeb
-    implementation 'com.just.agentweb:agentweb-androidx:4.1.4' // (必选)
-    implementation 'com.just.agentweb:filechooser-androidx:4.1.4'// (可选)
-    //implementation 'com.download.library:downloader-androidx:4.1.4'// (可选)
+    implementation 'com.github.Justson.AgentWeb:agentweb-core:v4.1.9-androidx' // (必选)
+    implementation 'com.github.Justson.AgentWeb:agentweb-filechooser:v4.1.9-androidx' // (可选)
+    implementation 'com.github.Justson:Downloader:v4.1.9-androidx' // (可选)
+
 }
