--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     def major = 1
     def minor = 0
-    def revision = 3
+    def revision = 4
     def build = rootProject.gitCommitCount
     def vCode = major * 10000 + minor * 1000 + revision * 100 + build
     def vName = "${major}.${minor}.${revision}.${build}"
@@ -47,6 +47,7 @@ android {
                     ENTRY_ACTION  : "android.intent.action.MAIN",
                     ENTRY_CATEGORY: "android.intent.category.LAUNCHER"
             ]
+            buildConfigField("String","SERVER_URL",'"http://sjsytest.ciih.net"')
         }
         release {
             minifyEnabled false
@@ -56,6 +57,7 @@ android {
                     ENTRY_ACTION  : "android.intent.action.MAIN",
                     ENTRY_CATEGORY: "android.intent.category.LAUNCHER"
             ]
+            buildConfigField("String","SERVER_URL",'"http://sjsytest.ciih.net"')
         }
 
         pStoreRelease{
@@ -66,6 +68,7 @@ android {
                     ENTRY_ACTION  : "pstore.intent.action.MAIN",
                     ENTRY_CATEGORY: "pstore.intent.category.APP"
             ]
+            buildConfigField("String","SERVER_URL",'"http://20.65.2.12:6070"')
         }
     }
     compileOptions {
