--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
             //设置支持的SO库架构
             abiFilters 'armeabi', 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
+
+        buildConfigField "String", "CLIENT_ID", '"B7ECB868FBF717187F135EC0DE84C7FA"'
     }
 
     buildTypes {
