--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
 
 
 
@@ -27,7 +27,7 @@ android {
 
     defaultConfig {
         applicationId "com.apm29.webviewwrapper"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 27
         versionCode vCode
         versionName vName
@@ -109,5 +109,14 @@ dependencies {
     implementation 'com.github.Justson.AgentWeb:agentweb-core:v4.1.9-androidx' // (必选)
     implementation 'com.github.Justson.AgentWeb:agentweb-filechooser:v4.1.9-androidx' // (可选)
     implementation 'com.github.Justson:Downloader:v4.1.9-androidx' // (可选)
+
+
+    //retrofit-coroutine
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 
 }
